--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Room in 3D</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Room</title>
 
-    <meta itemprop="name" content="My Room in 3D — Experiment">
-    <meta itemprop="description" content="Creative WebGL experiment with Three.js">
-    <meta itemprop="image" content="https://my-room-in-3d.vercel.app/social/share-1200x630.png">
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="My Room in 3D — Experiment">
-    <meta name="twitter:description" content="Creative WebGL experiment with Three.js">
-    <meta name="twitter:image" content="https://my-room-in-3d.vercel.app/social/share-1200x630.png">
-
-    <meta property="og:site_name" content="My Room in 3D — Experiment">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://my-room-in-3d.vercel.app">
-    <meta property="og:title" content="My Room in 3D — Experiment">
-    <meta property="og:description" content="Creative WebGL experiment with Three.js">
-    <meta property="og:image" content="https://my-room-in-3d.vercel.app/social/share-1200x630.png">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="experience"></div>
-    <div class="credits">
-        My Room in 3D by <a href="https://bruno-simon.com" target="_blank">Bruno Simon</a> (<a href="https://github.com/brunosimon/my-room-in-3d" target="_blank">Source code</a>)
-    </div>
-</body>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
+	</head>
+	<body>
+		<div class="experience"></div>
+		<!-- <div class="credits"></a></div> -->
+		<div class="credits">
+			<button class="btn record">
+				<svg width="26" height="26" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+					<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+					<path
+						d="M192 352c53.03 0 96-42.97 96-96v-160c0-53.03-42.97-96-96-96s-96 42.97-96 96v160C96 309 138.1 352 192 352zM344 192C330.7 192 320 202.7 320 215.1V256c0 73.33-61.97 132.4-136.3 127.7c-66.08-4.169-119.7-66.59-119.7-132.8L64 215.1C64 202.7 53.25 192 40 192S16 202.7 16 215.1v32.15c0 89.66 63.97 169.6 152 181.7V464H128c-18.19 0-32.84 15.18-31.96 33.57C96.43 505.8 103.8 512 112 512h160c8.222 0 15.57-6.216 15.96-14.43C288.8 479.2 274.2 464 256 464h-40v-33.77C301.7 418.5 368 344.9 368 256V215.1C368 202.7 357.3 192 344 192z"
+					/>
+				</svg>
+			</button>
+		</div>
+	</body>
 </html>
