do sth after prediction

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 		<div class="experience"></div>
 		<!-- <div class="credits"></a></div> -->
 		<div class="credits">
-			<button class="btn record">
+			<button class="btn record" disabled="true">
 				<svg width="26" height="26" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
 					<!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
 					<path
